Change margin of navbar.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6038,7 +6038,8 @@ textarea {
     .navbar-default .navbar-collapse,
     .navbar-inverse .navbar-collapse {
         margin: 0;
-        padding: 30px 0
+        padding: 30px 0;
+        margin-left: 15%
     }
 
     .navbar-default .navbar-collapse .navbar-nav,
